--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,3 +6,28 @@ body, html {
 * {
     box-sizing: border-box;
 }
+
+body {
+    background-color: #2b2b2b;
+    font-family: 'Press Start 2P', cursive;
+    color:white;
+    overflow:hidden;
+    margin:0px; padding:0px;
+}
+
+body * {
+    margin:0px; padding:0px;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none;
+    user-select: none;
+}
+
+square {
+    width: 60px;
+    height: 60px;
+    background-color: white
+}
