--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -29,5 +29,6 @@ body * {
 square {
     width: 60px;
     height: 60px;
-    background-color: white
+    background-color: white;
+    position: absolute
 }
