--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,9 @@
-body, html {
-    margin:0; padding:0;
-    width:100%; height:100%;
+body,
+html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 * {
@@ -10,18 +13,21 @@ body, html {
 body {
     background-color: #2b2b2b;
     font-family: 'Press Start 2P', cursive;
-    color:white;
-    overflow:hidden;
-    margin:0px; padding:0px;
+    color: white;
+    overflow: hidden;
+    margin: 0px;
+    padding: 0px;
 }
 
 body * {
-    margin:0px; padding:0px;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     background-repeat: no-repeat;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    -moz-user-select: none; /* Firefox */
+    -moz-user-select: none;
+    /* Firefox */
     -ms-user-select: none;
     user-select: none;
 }
