--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -36,14 +36,14 @@ square {
     width: 60px;
     height: 60px;
     background-color: white;
-    position: absolute
+    position: absolute;
 }
 
 triangle {
     width: 60px;
     height: 60px;
     position: absolute;
-	border-top: 30px solid transparent;
-	border-right: 50px solid red;
-	border-bottom: 30px solid transparent;
+    border-top: 30px solid transparent;
+    border-right: 50px solid red;
+    border-bottom: 30px solid transparent;
 }
