--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -31,10 +31,23 @@ body * {
     -ms-user-select: none;
     user-select: none;
 }
+score {
+    font-size: 3;
+    width:530px;
+    text-shadow: 0px 4px 0px rgba(0,0,0,0.5);
+    transform: translate(20px, 20px);
+}
+paused {
+    font-size: 1.4em;
+    width:530px;
+    text-shadow: 0px 4px 0px rgba(0,0,0,0.5);
+    transform: translate(400px, 20px);
+}
 
 square {
     width: 60px;
     height: 60px;
+    z-index: 3;
     background-color: white;
     position: absolute;
 }
@@ -42,6 +55,7 @@ square {
 triangle {
     width: 50px;
     height: 50px;
+    z-index: 2;
     position: absolute;
     border-top: 30px solid transparent;
     border-right: 50px solid red;
