kinda forgot what i did in the bus in traffic :)

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
     background-color: #2b2b2b;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Arial', sans-serif;
     color: white;
     overflow: hidden;
     margin: 0px;
@@ -50,6 +50,7 @@ square {
     z-index: 3;
     background-color: white;
     position: absolute;
+    box-shadow: 0 0 10px white;
 }
 
 triangle {
@@ -60,4 +61,15 @@ triangle {
     border-top: 30px solid transparent;
     border-right: 50px solid red;
     border-bottom: 30px solid transparent;
+    box-shadow: 0 0 10px red;
+}
+
+powerup {
+    width: 10px;
+    height: 10px;
+    z-index: 1;
+    position: absolute;
+    background-color: yellow;
+    border-radius: 50%;
+    box-shadow: 0 0 10px yellow;
 }
